--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==3.6.1
 astroid==2.12.11
+async-generator==1.10
 attrs==22.1.0
 autopep8==1.7.0
 Brotli==1.0.9
@@ -32,6 +33,7 @@ locust==2.12.2
 MarkupSafe==2.1.1
 mccabe==0.7.0
 msgpack==1.0.4
+outcome==1.2.0
 packaging==21.3
 platformdirs==2.5.2
 pluggy==1.0.0
@@ -41,12 +43,14 @@ pycodestyle==2.9.1
 pydantic==1.10.2
 pylint==2.15.4
 pyparsing==3.0.9
+PySocks==1.7.1
 pytest==7.1.3
 pytest-mock==3.10.0
 pytest-profiling==1.7.0
 pyzmq==24.0.1
 requests==2.28.1
 roundrobin==0.0.4
+selenium==4.8.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -55,11 +59,14 @@ starlette==0.20.4
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.5
+trio==0.22.0
+trio-websocket==0.9.2
 typing_extensions==4.4.0
 urllib3==1.26.12
 uvicorn==0.18.3
 Werkzeug==2.2.2
 wrapt==1.14.1
+wsproto==1.2.0
 zipp==3.9.0
 zope.event==4.5.0
 zope.interface==5.5.0
