--- a/.github/workflows/test-python.1.yml
+++ b/.github/workflows/test-python.1.yml
@@ -1,4 +1,4 @@
-name: Python App
+name: Python CI
 
 on:
   workflow_dispatch:
@@ -20,8 +20,12 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install -r requirements.txt
-      - name: launch App
+      - name: Pylint
         run: |
-          python application/main2.py
-  
-
+           pylint --exit-zero application/main2.py
+      - name: Coverage
+        run: |
+            coverage run -m pytest --profile ./
+#      - name: locust
+#        run: | 
+#           & locust -f tests/locustfile.py
